# Roborally-card-detector

./: .gitignore  CMakeLists.txt  recognize_digits.py
src/: main.cpp  open.cpp  utils.cpp  utils.hpp
version_cpp/: CMakeLists.txt
version_cpp/src/: utils.cpp  utils.hpp
