cmake_minimum_required(VERSION 2.8)
project(Roborally)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Roborally src/main.cpp src/utils.cpp)
target_link_libraries( Roborally ${OpenCV_LIBS} )
add_executable( Open src/open.cpp)
target_link_libraries( Open ${OpenCV_LIBS} )
